--- a/src/index.css
+++ b/src/index.css
@@ -88,7 +88,7 @@ body {
 .btn-primary {
   background-color: #27bed6; /* Cyan color */
   border-color: #00d9ff; /* Cyan color */
-  color: #fff; /* White text */
+  color: #252525; /* White text */
   /* padding: 12px; Decreased padding for better touch */
   cursor: pointer;
   transition: background-color 0.3s ease, border-color 0.3s ease; /* Smooth transition */
